--- a/app/views/developers/index.html.erb
+++ b/app/views/developers/index.html.erb
@@ -1,12 +1,23 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Developers</h1>
+<!-- search -->
+<%= form_for  @developerearchform, url: developers_path, method: :get do |f| %>
+<%= f.label "text" %>
+<%= f.text_field :email %>
+<%= f.label "Language" %>
+<%= f.select(:language_id, Language.pluck(:code, :id), { include_blank: true, select: 3 } ) %>
+<%= f.label "Programing" %>
+<%= f.select(:programming_language_id, ProgrammingLanguage.pluck(:name, :id), { include_blank: true }) %> 
 
+<%= f.submit "Search" %>
+<% end %>
 <table>
   <thead>
     <tr>
       <th>Email</th>
-      <th colspan="3"></th>
+      <th>Language </th>
+      <th> Programe language </th>
     </tr>
   </thead>
 
@@ -14,6 +25,8 @@
     <% @developers.each do |developer| %>
       <tr>
         <td><%= developer.email %></td>
+        <td><%= developer.languages.pluck(:code).join(",") %></td>
+        <td><%= developer.programming_languages.pluck(:name).join(",") %></td>
         <td><%= link_to 'Show', developer %></td>
         <td><%= link_to 'Edit', edit_developer_path(developer) %></td>
         <td><%= link_to 'Destroy', developer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
