--- a/app/views/developers/index.html.erb
+++ b/app/views/developers/index.html.erb
@@ -1,38 +1,44 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Developers</h1>
+<h2>List developers</h2>
 <!-- search -->
-<%= form_for  @developerearchform, url: developers_path, method: :get do |f| %>
-<%= f.label "Language" %>
-<%= f.select(:language_id, Language.pluck(:code, :id), { include_blank: true, select: 3 } ) %>
-<%= f.label "Programing" %>
-<%= f.select(:programming_language_id, ProgrammingLanguage.pluck(:name, :id), { include_blank: true }) %> 
-
-<%= f.submit "Search" %>
+<%= form_for  @developerearchform, url: developers_path, method: :get, html: { class: "form-inline"}  do |f| %>
+<div class="form-group">
+<%= f.label "Language: " %>
+<%= f.select(:language_id, Language.pluck(:code, :id), { include_blank: '-------'}, {class:"form-control"} ) %>
+</div>
+<div class="form-group">
+<%= f.label "Programing: " %>
+<%= f.select(:programming_language_id, ProgrammingLanguage.pluck(:name, :id), { include_blank: '-------' },{ class: 'form-control'}) %> 
+</div>
+<%= f.submit "Search", {class:"btn btn-success", style:'margin-left:10px'} %>
 <% end %>
-<table>
-  <thead>
-    <tr>
-      <th>Email</th>
-      <th>Language </th>
-      <th> Programe language </th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @developers.each do |developer| %>
-      <tr>
-        <td><%= developer.email %></td>
-        <td><%= developer.languages.pluck(:code).join(",") %></td>
-        <td><%= developer.programming_languages.pluck(:name).join(",") %></td>
-        <td><%= link_to 'Show', developer %></td>
-        <td><%= link_to 'Edit', edit_developer_path(developer) %></td>
-        <td><%= link_to 'Destroy', developer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
 <br>
+<div class="row">
+  <div class="col-sm-12">
+    <table class="table table-hover table-bordered">
+      <thead>
+        <tr>
+          <th>Email</th>
+          <th>Language </th>
+          <th> Programe language </th>
+        </tr>
+      </thead>
 
-<%= link_to 'New Developer', new_developer_path %>
+      <tbody>
+        <% @developers.each do |developer| %>
+          <tr>
+            <td><%= developer.email %></td>
+            <td><%= developer.languages.pluck(:code).join(",") %></td>
+            <td><%= developer.programming_languages.pluck(:name).join(",") %></td>
+            
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
+<div class="row">
+  <div class="col-sm-12">
+    <%= paginate @developers, theme: 'twitter-bootstrap-4' %>
+  </div>
+</div>
+<br>
